--- a/disk/styles.css
+++ b/disk/styles.css
@@ -570,6 +570,10 @@ video {
   left: 0px;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
 .left-\[350px\] {
   left: 350px;
 }
@@ -594,48 +598,16 @@ video {
   top: -50px;
 }
 
+.top-\[12px\] {
+  top: 12px;
+}
+
 .top-\[150px\] {
   top: 150px;
 }
 
 .top-\[280px\] {
   top: 280px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[-10px\] {
-  top: -10px;
-}
-
-.top-\[-200px\] {
-  top: -200px;
-}
-
-.left-\[50px\] {
-  left: 50px;
-}
-
-.top-\[50px\] {
-  top: 50px;
 }
 
 .m-10 {
@@ -666,6 +638,10 @@ video {
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.ml-44 {
+  margin-left: 11rem;
 }
 
 .ml-6 {
@@ -700,6 +676,10 @@ video {
   margin-left: 200px;
 }
 
+.ml-\[350px\] {
+  margin-left: 350px;
+}
+
 .ml-\[380px\] {
   margin-left: 380px;
 }
@@ -720,12 +700,24 @@ video {
   margin-left: 500px;
 }
 
+.ml-\[650px\] {
+  margin-left: 650px;
+}
+
 .ml-\[960px\] {
   margin-left: 960px;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-\[-100px\] {
@@ -744,32 +736,16 @@ video {
   margin-top: 200px;
 }
 
+.mt-\[280px\] {
+  margin-top: 280px;
+}
+
 .mt-\[60px\] {
   margin-top: 60px;
 }
 
 .mt-\[80px\] {
   margin-top: 80px;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[400px\] {
-  margin-top: 400px;
-}
-
-.mt-\[300px\] {
-  margin-top: 300px;
-}
-
-.mt-\[-\] {
-  margin-top: -;
-}
-
-.mt-\[-10px\] {
-  margin-top: -10px;
 }
 
 .flex {
@@ -1167,6 +1143,18 @@ video {
 
 .align-middle {
   vertical-align: middle;
+}
+
+.font-Rowdies {
+  font-family: "Rowdies", cursive;
+}
+
+.font-Saira {
+  font-family: "Saira", sans-serif;
+}
+
+.font-righteous {
+  font-family: Righteous, sans-serif;
 }
 
 .text-3xl {
